fix right-margin on mobile

--- a/CodeBlog/CodeBlog/static/css/News/main.css
+++ b/CodeBlog/CodeBlog/static/css/News/main.css
@@ -361,10 +361,10 @@ input::placeholder {
 
 .news-item {
     /* flex: 1 0 auto; */
-    min-width: 200px;
+    /* min-width: 200px; */
     /* max-width: 300px; */
     /* min-height: 300px; */
-    object-fit: cover;
+    /* object-fit: cover; */
     cursor: pointer;
 }
 
