--- a/CodeBlog/CodeBlog/static/css/News/reset.css
+++ b/CodeBlog/CodeBlog/static/css/News/reset.css
@@ -37,6 +37,7 @@ body {
 html, body{
     height: 100%;
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 ol, ul, dd{
     list-style: none;
